# primitives

./: 0log  CHANGELOG.md  Cargo.toml  README.md  build_rs_cov.profraw  justfile  rustfmt.toml  tarpaulin.toml
body-plz/: Cargo.toml
body-plz/src/: body_struct.rs  lib.rs
body-plz/src/reader/: chunked_reader.rs  content_length_reader.rs
body-plz/src/variants/: chunked.rs  mod.rs
buffer-plz/: Cargo.toml
decompression-plz/: Cargo.toml
decompression-plz/src/: chunked.rs  content_length.rs  decode_struct.rs  decompress_trait.rs  decompressors.rs  dstruct.rs  dtraits.rs  encoding_type.rs  error.rs  lib.rs  state.rs
decompression-plz/src/decompression/: decompressors.rs  dstruct.rs  error.rs  magic_bytes.rs  mod.rs  state.rs
decompression-plz/src/decompression/multi/: error.rs  mod.rs
decompression-plz/src/decompression/single/: error.rs  mod.rs
decompression-plz/tests/: tests.rs
decompression-plz/tests-utils/: Cargo.toml
decompression-plz/tests-utils/src/: lib.rs
decompression-plz/tests/test_cases/: both_te_ce.rs  chunked.rs  corrupt.rs  mod.rs  no_encodings.rs  single_compression.rs
decompression-plz/tests/test_cases/chunked/: mod.rs
decompression-plz/tests/test_cases/complete/: mod.rs
decompression-plz/tests/test_cases/complete/multi_compression/: mod.rs
decompression-plz/tests/test_cases/complete/multi_compression/multi_header/: body_only.rs  mod.rs  with_extra.rs
decompression-plz/tests/test_cases/complete/multi_compression/multi_header/body_only/: ce.rs  te.rs
decompression-plz/tests/test_cases/complete/multi_compression/multi_header/with_extra/: mod.rs
decompression-plz/tests/test_cases/complete/multi_compression/multi_header/with_extra/ce/: compressed_together.rs
decompression-plz/tests/test_cases/complete/multi_compression/single_header/: body_only.rs  mod.rs  with_extra.rs
decompression-plz/tests/test_cases/complete/multi_compression/single_header/body_only/: te.rs
decompression-plz/tests/test_cases/complete/multi_compression/single_header/with_extra/: mod.rs
decompression-plz/tests/test_cases/complete/multi_compression/single_header/with_extra/ce/: compressed_separate.rs  compressed_together.rs  mod.rs
decompression-plz/tests/test_cases/complete/multi_compression/single_header/with_extra/te/: compressed_together.rs
decompression-plz/tests/test_cases/complete/single_compression/: body_only.rs  mod.rs  with_extra.rs
decompression-plz/tests/test_cases/complete/single_compression/body_only/: ce.rs
decompression-plz/tests/test_cases/complete/single_compression/with_extra/: mod.rs
decompression-plz/tests/test_cases/complete/single_compression/with_extra/ce/: compressed_together.rs
decompression-plz/tests/test_cases/corrupt/: mod.rs
decompression-plz/tests/test_cases/corrupt/ce/: body_only.rs  extra.rs
decompression-plz/tests/test_cases/corrupt/te/: body_only.rs  extra.rs
decompression-plz/tests/test_cases/multi_compression/: mod.rs  multi_header.rs  single_header.rs
decompression-plz/tests/test_cases/multi_compression/multi_header/: mod.rs
decompression-plz/tests/test_cases/multi_compression/multi_header/body_only/: ce.rs  mod.rs  te.rs
decompression-plz/tests/test_cases/multi_compression/multi_header/with_extra/: mod.rs
decompression-plz/tests/test_cases/multi_compression/multi_header/with_extra/ce/: compressed_separate.rs  raw.rs
decompression-plz/tests/test_cases/multi_compression/multi_header/with_extra/te/: mod.rs
decompression-plz/tests/test_cases/multi_compression/single_header/: mod.rs
decompression-plz/tests/test_cases/multi_compression/single_header/body_only/: ce.rs
decompression-plz/tests/test_cases/multi_compression/single_header/with_extra/ce/: compressed_separate.rs  raw.rs
decompression-plz/tests/test_cases/multi_compression/single_header/with_extra/te/: compressed_separate.rs  raw.rs
decompression-plz/tests/test_cases/partial/: mod.rs  multi_header.rs  single_header.rs
decompression-plz/tests/test_cases/partial/corrupt/ce/: body_only.rs  extra.rs
decompression-plz/tests/test_cases/partial/corrupt/te/: body_only.rs  extra.rs  mod.rs
decompression-plz/tests/test_cases/single_compression/: mod.rs
decompression-plz/tests/test_cases/single_compression/body_only/: te.rs
decompression-plz/tests/test_cases/single_compression/with_extra/: mod.rs
decompression-plz/tests/test_cases/single_compression/with_extra/ce/: compressed_separate.rs  compressed_together.rs  raw.rs
decompression-plz/tests/test_cases/single_compression/with_extra/te/: compressed_separate.rs  compressed_together.rs  raw.rs
header-plz/: Cargo.toml
header-plz/src/: abnf.rs  bytes_str.rs  const_headers.rs  error.rs  header_struct.rs  lib.rs  message_head.rs  method.rs  methods.rs  reader.rs  scheme.rs  status.rs  version.rs
header-plz/src/body_headers/: content_encoding.rs  encoding_info.rs  encoding_struct.rs  from_header_map.rs  mod.rs  parse.rs  transfer_types.rs
header-plz/src/header_map/: from_bytes.rs  mod.rs
header-plz/src/header_map/header/: from_bytes.rs  from_str.rs  mod.rs
header-plz/src/info_line/: mod.rs  request.rs  response.rs
header-plz/src/message_head/: mod.rs  try_from_bytes.rs
header-plz/src/message_head/header_map/: from_bytes.rs  mod.rs  one.rs  two.rs
header-plz/src/message_head/header_map/header/: from_bytes.rs  from_str.rs  mod.rs
header-plz/src/message_head/info_line/: error.rs  request.rs  response.rs
header-plz/src/message_head/info_line/one/: error.rs  mod.rs  request.rs  response.rs
header-plz/src/message_head/info_line/two/: request.rs  response.rs
header-plz/src/uri/: builder.rs  mod.rs  path.rs  scheme.rs
header-plz/src/uri/path/: mod.rs  path_mut.rs  query.rs
just-scripts/: commit-msg
mime-plz/: Cargo.toml  build.rs
mime-plz/benches/: mybench.rs
mime-plz/src/: lib.rs
mime-plz/src/content_type/: mod.rs
mime-plz/src/mime_type/: app.rs  audio.rs  font.rs  image.rs  message.rs  model.rs  text.rs  video.rs
protocol-plz/: Cargo.toml
protocol-plz/src/: lib.rs
protocol-traits-plz/: Cargo.toml
protocol-traits-plz/src/: frame.rs  step.rs
(+20 files in other folders)
