[workspace]
resolver = "3"
members = [
  "body-plz",
  "buffer-plz", 
  "decompression-plz",
  "header-plz",
  "mime-plz",
  "protocol-traits-plz",
  "uri-plz"
]

[workspace.dependencies]
bytes = "1.10"
criterion = "0.5"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = { version = "2" }
tracing = { version = "0.1" }
