[workspace]
resolver = "3"
members = [
  "body-plz",
  "buffer-plz", 
  "decompression-plz",
  "header-plz",
  "mime-plz",
  "protocol-traits-plz",
]

[workspace.dependencies]
bytes = "1.10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = { version = "2" }
tracing = { version = "0.1" }

# dev
criterion = { version = "0.6" }
tracing-subscriber = { version = "0.3" }
