[package]
name = "body-plz"
version = "0.0.41"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "Body for the ParsePlz ecosystem"
repository = "https://github.com/parseplz/primitives"
license = "MIT"
edition = "2024"

[dependencies]
buffer-plz = "0.0.3"
bytes = { workspace = true }
header-plz =  "0.0.37"
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
