[package]
name = "body-plz"
version = "0.0.45"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "Body for the ParsePlz ecosystem"
repository = "https://github.com/parseplz/primitives"
license = "MIT"
edition = "2024"

[dependencies]
buffer-plz = "0.0.3"
bytes = { workspace = true }
header-plz =  "0.0.42"
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
