[package]
name = "decompression-plz"
version = "0.0.19"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "Decompression for ParsePlz ecosystem"
repository = "https://github.com/parseplz/primitives"
license = "MIT"
edition = "2024"

[dependencies]
# Primitives
header-plz = "0.0.38"
body-plz = "0.0.42"

# Compression
brotli = "8.0.0"
flate2 = "1.1.0"
zstd = "0.13.3"

# Workspace
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tests-utils = { path = "tests-utils" }
rstest = "0.26.1"

[lints]
workspace = true
