[package]
name = "header-plz"
version = "0.0.6"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "Header for the ParsePlz ecosystem"
repository = "https://github.com/parseplz/primitives"
license = "MIT"
edition = "2024"

[dependencies]
buffer-plz = "0.0.3"
mime-plz = "0.0.2"
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
http = "1.3.1"
