[package]
name = "header-plz"
version = "0.0.37"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "Header for the ParsePlz ecosystem"
repository = "https://github.com/parseplz/primitives"
license = "MIT"
edition = "2024"

[dependencies]
buffer-plz = "0.0.3"
bytes = { workspace = true }
mime-plz = "0.0.2"
percent-encoding = "2.3.2"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = "0.26.1"
