[package]
name = "mime-plz"
version = "0.0.1"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "Mime for the ParsePlz ecosystem"
repository = "https://github.com/parseplz/primitives"
license = "MIT"
edition = "2024"

[dependencies]
lazy_static = "1.5"
serde = { workspace = true }

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "performance"
harness = false
