[package]
name = "protocol-traits-plz"
version = "0.0.2"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "Protocol traits for the ParsePlz ecosystem"
repository = "https://github.com/parseplz/primitives"
license = "MIT"
edition = "2024"

[dependencies]
buffer-plz = { path = "../buffer-plz", version = "0.0.1" }
bytes = { workspace = true }
