[package]
name = "protocol-traits-plz"
version = "0.0.4"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "Protocol traits for the ParsePlz ecosystem"
repository = "https://github.com/parseplz/primitives"
license = "MIT"
edition = "2024"

[dependencies]
buffer-plz = "0.0.3"
bytes = { workspace = true }

[lints]
workspace = true
